--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
     <h1 class="title" id="title">Tabs Manager</h1>
     <h4 class="subtitle">Você também pode buscar uma página pressionando o atalho Ctrl + M</h4>
     <div class="text-input-container">
-      <input class="text-input" id="searchBar" placeholder="Buscar aba" autofocus></input>
+      <input class="text-input" id="search-input" placeholder="Buscar aba" autofocus></input>
       <img class="text-input-img" src="search-icon.svg" />
     </div>
   </div> 
